// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders badge 1`] = `
<Text
  collapsable={false}
  maxFontSizeMultiplier={1}
  numberOfLines={1}
  style={
    {
      "alignSelf": "flex-end",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 9999,
      "color": "rgba(255, 255, 255, 1)",
      "height": 6,
      "minWidth": 6,
      "opacity": 1,
      "overflow": "hidden",
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
/>
`;

exports[`renders badge as hidden 1`] = `
<Text
  collapsable={false}
  maxFontSizeMultiplier={1}
  numberOfLines={1}
  style={
    {
      "alignSelf": "flex-end",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 9999,
      "color": "rgba(255, 255, 255, 1)",
      "fontFamily": "System",
      "fontSize": 11,
      "fontWeight": "500",
      "height": 16,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "maxWidth": 36,
      "minWidth": 16,
      "opacity": 0,
      "overflow": "hidden",
      "paddingHorizontal": 4,
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
>
  3
</Text>
`;

exports[`renders badge in different color 1`] = `
<Text
  collapsable={false}
  maxFontSizeMultiplier={1}
  numberOfLines={1}
  style={
    {
      "alignSelf": "flex-end",
      "backgroundColor": "#f44336",
      "borderRadius": 9999,
      "color": "rgba(255, 255, 255, 1)",
      "fontFamily": "System",
      "fontSize": 11,
      "fontWeight": "500",
      "height": 16,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "maxWidth": 36,
      "minWidth": 16,
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 4,
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
>
  3
</Text>
`;

exports[`renders badge with content 1`] = `
<Text
  collapsable={false}
  maxFontSizeMultiplier={1}
  numberOfLines={1}
  style={
    {
      "alignSelf": "flex-end",
      "backgroundColor": "rgba(179, 38, 30, 1)",
      "borderRadius": 9999,
      "color": "rgba(255, 255, 255, 1)",
      "fontFamily": "System",
      "fontSize": 11,
      "fontWeight": "500",
      "height": 16,
      "letterSpacing": 0.5,
      "lineHeight": 16,
      "maxWidth": 36,
      "minWidth": 16,
      "opacity": 1,
      "overflow": "hidden",
      "paddingHorizontal": 4,
      "textAlign": "center",
      "textAlignVertical": "center",
    }
  }
>
  3
</Text>
`;
